refactor: добавить базу данных по замечаниям ревью 1 (ТЗ-11)